# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.122 2004/12/15 00:50:35 wolf31o2 Exp $

  14 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh:
  Changed livecd-stage1 to merge each package individually. This should not
  make it into a production version of catalyst, but is here as a possible
  solution to bug #68307.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh:
  Added failures to all arches on mkisofs failure and also made -z option to
  mkisofs optional on x86 depending on loop type used.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Making sure the mkisofs call causes a failure when it doesn't complete
  successfully. Once again, blame jforman, our beloved infra-monkey.

  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/default-runscript.sh:
  squashfs-utils->squashfs-tools fix.  Blame jforman.

  09 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/isogen/x86-isogen.sh:
  Removed -no-emul-boot from x86-isogen.sh to keep the ISO being made from
  possibly not booting on really old systems.

  09 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh:
  Removed -no-emul-boot from x86-archscript.sh to keep the ISO being made from
  possibly not booting on really old systems.

  08 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Save some space by removing redundant firmware after tarball is made, only
  perform sed on /etc/conf.d/gpm if it exists, and change fstab to be more
  readable.
